<resources>
    <string name="app_name">Library</string>
    <string name="choice1">经典文学</string>
    <string name="choice2">网络小说</string>
    <string name="choice3">敬请期待</string>
    <string name="button_find">查找</string>
    <string name="find_cannot_benull">搜索框不能为空</string>
    <string name="recom">主编吐血推荐:</string>
    <string name="bookNmae">书籍名: </string>
    <string name="bookId">书籍ID: </string>
    <string name="bookAuthor">书籍作者: </string>
    <string name="bookFromSource">书籍来源站: </string>
    <string name="bookFromSourceId">书籍来源站ID: </string>
    <string name="newestChapter">最新章节:</string>
    <string name="Summarynice">精彩书评</string>
    <string name="chapter">章节</string>
    <string name="read11">阅读</string>
    <string name="addBook">加入书架</string>
    <string name="back">返回</string>
    <string name="jysummary">用一下午的时间看完了这系列书的第一部，书里包含的内容十分之多，一见倾心的小爱情，一厢情愿的爱恋，亲情的疏远或浓厚，残酷的灭国之战，藏在市井对还故土抱有一腔热忱的人，各大皇室之间的明争暗斗……也有包罗万象的奇门秘术，蛊虫和偃师、玄学、机关等，比如是机关术这一学门，是我国鲁班所发明的，起初用于两国之间的斗争，我想这相比单纯的血肉拼搏，利用特异功能的兵器和可高超玩转的机关陷阱去和对方你争我夺，是充满了智慧。并对它们都有一定的描述，像一块敲门砖，神秘又有趣，使人对这上古的秘术有一定的了解，以及更多好奇。</string>
    <string name="cscssummary">全书像是在看乱世历史剧一般，故事节奏不算慢，线多不乱。最重要，对众多人物的刻画最能看出作者们的功力深厚。每个人物的感觉都不一样，野心勃勃的单纯的肆意的善良勇敢的为爱甘愿奉献的虚伪的心机的突然违背本性的……生动形象，逼真饱满，都有分别把人性中的不同侧面都展现了出来，也都具有气质特点过目不忘。或无绝对坏人，人有苦衷或被世态逼迫，在所难免。期间，是有不少令人深刻的角色似乎已下线，悬而未决的，毕竟在这个包罗万象的有无尽可能的故事世界里，民间秘术太多，作者可能带我们走向的道路有无数条，难作猜测。</string>
    <string name="mysummary">看过有一句评价写得精准，大约说到萧红的难得，是因在文气女子的顾影自怜当中，又不乏悲悯。这种悲悯是不易察觉的，就像呼兰河里的人们，人形丰满却显得色彩暗淡，犹如化不开的沉重浓雾，以小团圆媳妇最甚，又以家乡的庙会舞戏作为点缀，给神看的，给鬼演的，给人做的，唯独没有给自己活着的，轻飘飘一笔带过，最契合鲁迅先生说过的：“ 灵魂的受毒害是悲剧以上的悲剧。" </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
