<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:background="@color/lightcyan"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="260dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_bookName"
                android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/bookNmae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_bookAuthor"
                android:layout_marginBottom="10dp"

                android:textSize="20sp"
                android:text="@string/bookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_bookFromSource"
                android:textSize="20sp"
                android:text="@string/bookFromSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout

            android:layout_marginStart="260dp"
            android:layout_marginLeft="260dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/novel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
