<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apsn.library.com.example.apsn.classicLiterature.SummaryActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/back_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:src="@drawable/bacbutton" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Image_novel"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/novel" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/showName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginStart="40dp"

                        android:layout_marginTop="20dp"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/showauthorname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"

                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:text="0.05元/千字" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp"
                android:paddingTop="30dp">

                <Button
                    android:id="@+id/chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edit"
                    android:text="@string/chapter" />

                <Button
                    android:id="@+id/read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/shape_button"

                    android:text="@string/read11" />

                <Button
                    android:id="@+id/addBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:text="@string/addBook" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/lavender" />

                <jaydenxiao.com.expandabletextview.ExpandableTextView
                    android:id="@+id/showsummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:animDuration="200"
                    app:collapseDrawable="@drawable/icon_green_arrow_up"
                    app:collapseExpandGrarity="right"
                    app:collapseExpandTextColor="@color/main_color"
                    app:contentTextColor="@color/gray"
                    app:contentTextSize="14sp"
                    app:expandDrawable="@drawable/icon_green_arrow_down"
                    app:maxCollapsedLines="3"
                    app:textCollapse="@string/collapse"
                    app:textExpand="@string/expand"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/lavender" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/newestChapter"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/newestChapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>

            <include
                android:id="@+id/bottom"
                layout="@layout/summarybottom" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
